[package]
name = "nouzdb"
version = "0.1.0"
edition = "2021"
authors = ["Nouzan"]
license = "MIT"
description = "An embedded database for learning purpose that is based on SSTables."
repository = "https://github.com/Nouzan/nouzdb"
keywords = ["database"]

[dependencies]
tracing = "0.1"
bytes = "1.1.0"
thiserror = "1.0.30"
csv = "1.1.6"
crc = "2.1.0"

[dev-dependencies]
anyhow = "1.0.51"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
rustyline = "9.0.0"
structopt = "0.3"
